[package]
name = "control_statements"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="if"
path="src/if.rs"

[[bin]]
name="ifelse"
path="src/ifelse.rs"

[[bin]]
name="ifelse2"
path="src/ifelse2.rs"

[[bin]]
name="ifelse_nested"
path="src/ifelse_nested.rs"

[[bin]]
name="letif"
path="src/letif.rs"

[[bin]]
name="letif2"
path="src/letif2.rs"

[[bin]]
name="loop"
path="src/loop.rs"

[[bin]]
name="loop2"
path="src/loop2.rs"

[[bin]]
name="while_loop"
path="src/while_loop.rs"

[[bin]]
name="while_loop2"
path="src/while_loop2.rs"

[[bin]]
name="for_loop"
path="src/for_loop.rs"

[[bin]]
name="for_loop2"
path="src/for_loop2.rs"

[[bin]]
name="for_loop3"
path="src/for_loop3.rs"