[package]
name = "error"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="error01"
path="src/error01.rs"

[[bin]]
name="error02"
path="src/error02.rs"

[[bin]]
name="error03"
path="src/error03.rs"

[[bin]]
name="error04"
path="src/error04.rs"

[[bin]]
name="error05"
path="src/error05.rs"

[[bin]]
name="error06"
path="src/error06.rs"

[[bin]]
name="error07"
path="src/error07.rs"

[[bin]]
name="error08"
path="src/error08.rs"

[[bin]]
name="error09"
path="src/error09.rs"

[[bin]]
name="error10"
path="src/error10.rs"

[[bin]]
name="error11"
path="src/error11.rs"

[[bin]]
name="error12"
path="src/error12.rs"

[[bin]]
name="error13"
path="src/error13.rs"