[package]
name = "generics"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="generics01"
path="src/generics01.rs"

[[bin]]
name="generics02"
path="src/generics02.rs"

[[bin]]
name="generics03"
path="src/generics03.rs"

[[bin]]
name="generics04"
path="src/generics04.rs"

[[bin]]
name="generics05"
path="src/generics05.rs"

[[bin]]
name="generics06"
path="src/generics06.rs"

[[bin]]
name="trait01"
path="src/trait01.rs"

[[bin]]
name="trait02"
path="src/trait02.rs"

[[bin]]
name="trait03"
path="src/trait03.rs"

[[bin]]
name="trait04"
path="src/trait04.rs"

[[bin]]
name="trait05"
path="src/trait05.rs"

[[bin]]
name="trait06"
path="src/trait06.rs"

[[bin]]
name="trait07"
path="src/trait07.rs"

[[bin]]
name="trait08"
path="src/trait08.rs"

[[bin]]
name="trait09"
path="src/trait09.rs"

[[bin]]
name="lifetime01"
path="src/lifetime01.rs"

[[bin]]
name="lifetime02"
path="src/lifetime02.rs"

[[bin]]
name="lifetime03"
path="src/lifetime03.rs"

[[bin]]
name="lifetime04"
path="src/lifetime04.rs"

[[bin]]
name="lifetime05"
path="src/lifetime05.rs"

[[bin]]
name="lifetime_ellision01"
path="src/lifetime_ellision01.rs"

[[bin]]
name="lifetime_ellision02"
path="src/lifetime_ellision02.rs"

[[bin]]
name="lifetime_ellision03"
path="src/lifetime_ellision03.rs"