[package]
name = "module"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="module1"
path="src/module1.rs"

[[bin]]
name="module2"
path="src/module2.rs"

[[bin]]
name="module3"
path="src/module3.rs"

[[bin]]
name="module4"
path="src/module4.rs"

[lib]
name="lib1"
path="src1/lib.rs"


[[bin]]
name="module5"
path="src/module5.rs"

[[bin]]
name="module6"
path="src/module6.rs"

[[bin]]
name="use1"
path="src/use1.rs"

[[bin]]
name="use2"
path="src/use2.rs"


[[bin]]
name="use3"
path="src/use3.rs"


[[bin]]
name="use4"
path="src/use4.rs"