[package]
name = "ownership"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="ownership1"
path="src/ownership1.rs"

[[bin]]
name="ownership2"
path="src/ownership2.rs"

[[bin]]
name="ownership3"
path="src/ownership3.rs"

[[bin]]
name="ownership4"
path="src/ownership4.rs"

[[bin]]
name="references_and_borrowing1"
path="src/references_and_borrowing1.rs"

[[bin]]
name="references_and_borrowing2"
path="src/references_and_borrowing2.rs"

[[bin]]
name="references_and_borrowing3"
path="src/references_and_borrowing3.rs"

[[bin]]
name="references_and_borrowing4"
path="src/references_and_borrowing4.rs"

[[bin]]
name="slices1"
path="src/slices1.rs"

[[bin]]
name="slices2"
path="src/slices2.rs"

[[bin]]
name="slices3"
path="src/slices3.rs"

[[bin]]
name="slices4"
path="src/slices4.rs"

[[bin]]
name="slices5"
path="src/slices5.rs"

[[bin]]
name="slices6"
path="src/slices6.rs"