[package]
name = "smart_pointers"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="box01"
path="src/box01.rs"

[[bin]]
name="box02"
path="src/box02.rs"

[[bin]]
name="box03"
path="src/box03.rs"

[[bin]]
name="deref01"
path="src/deref01.rs"

[[bin]]
name="deref02"
path="src/deref02.rs"

[[bin]]
name="deref03"
path="src/deref03.rs"

[[bin]]
name="deref04"
path="src/deref04.rs"

[[bin]]
name="deref05"
path="src/deref05.rs"

[[bin]]
name="drop01"
path="src/drop01.rs"

[[bin]]
name="drop02"
path="src/drop02.rs"

[[bin]]
name="drop03"
path="src/drop03.rs"

[[bin]]
name="rc01"
path="src/rc01.rs"

[[bin]]
name="rc02"
path="src/rc02.rs"

[[bin]]
name="rc03"
path="src/rc03.rs"

[[bin]]
name="refcell01"
path="src/refcell01.rs"

[[bin]]
name="refcell02"
path="src/refcell02.rs"

[[bin]]
name="refcell03"
path="src/refcell03.rs"

[[bin]]
name="refcell04"
path="src/refcell04.rs"

[[bin]]
name="refcell05"
path="src/refcell05.rs"

[[bin]]
name="refcell06"
path="src/refcell06.rs"