[package]
name = "vectors"
version = "0.1.0"
authors = ["Kosorukov Anatoly <java1cprog@yandex.ru>"]

[dependencies]

[[bin]]
name="vector1"
path="src/vector1.rs"

[[bin]]
name="vector2"
path="src/vector2.rs"

[[bin]]
name="vector3"
path="src/vector3.rs"

[[bin]]
name="vector4"
path="src/vector4.rs"

[[bin]]
name="vector5"
path="src/vector5.rs"

[[bin]]
name="vector6"
path="src/vector6.rs"

[[bin]]
name="vector7"
path="src/vector7.rs"

[[bin]]
name="vector8"
path="src/vector8.rs"

[[bin]]
name="vector9"
path="src/vector9.rs"

[[bin]]
name="vector10"
path="src/vector10.rs"

[[bin]]
name="string1"
path="src/string1.rs"

[[bin]]
name="string2"
path="src/string2.rs"

[[bin]]
name="string3"
path="src/string3.rs"

[[bin]]
name="string4"
path="src/string4.rs"

[[bin]]
name="string5"
path="src/string5.rs"

[[bin]]
name="string6"
path="src/string6.rs"

[[bin]]
name="string7"
path="src/string7.rs"

[[bin]]
name="string8"
path="src/string8.rs"

[[bin]]
name="string9"
path="src/string9.rs"

[[bin]]
name="string10"
path="src/string10.rs"

[[bin]]
name="string11"
path="src/string11.rs"